--- a/.classpath
+++ b/.classpath
@@ -20,7 +20,8 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/PRAM/Downloads/Required Forms/jars/activation-1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/PRAM/Downloads/Required Forms/jars/javax.mail-1.6.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_241">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
