--- a/.classpath
+++ b/.classpath
@@ -6,25 +6,22 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PRAM/Downloads/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27/mysql-connector-java-8.0.27.jar"/>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.56/lib/servlet-api.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PRAM/Downloads/Required Forms/jars/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/PRAM/Downloads/Required Forms/jars/javax.mail-1.6.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_241">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_241">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/PRAM/git/jars/activation-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/PRAM/git/jars/javax.mail-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/PRAM/git/jars/jstl-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/PRAM/git/jars/mysql-connector-j-8.0.32.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/PRAM/git/jars/javax.servlet-3.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
